# codeprism

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/commands/: context-map.md  context-slice.md
.github/: RELEASE_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: tests.yml
apps/brain-viz/: README.md
apps/pixel-brain/: README.md
docs/: activity-stream-schema.md  architecture.md  benchmarks.md  codex-handoff.md  community-comparison.md  demo.md  pixel-brain-mode.md  release.md  roadmap.md  visualization-plan.md
examples/: activity-stream.sample.jsonl
examples/benchmarks/basic-python/: README.md
examples/field-notes/: README.md  public-repos.json
integrations/claude-commands/: context-map.md  context-query.md  context-slice.md
integrations/claude-skill/context-optimizer/: SKILL.md
integrations/claude-skill/cortext/: SKILL.md
integrations/codex/: contextopt-prompt.md
integrations/copilot/: copilot-instructions.md
scripts/: benchmark_trend.py  install_integrations.py  pre_release_proof.py  render_benchmark_chart.py  run_field_notes.py
src/contextopt/: activity.py  artifacts.py  benchmark.py  cli.py  config.py  gain.py  live_trace.py  map_lock.py  mapper.py  memory.py  query.py  scanner.py  slicer.py  stats.py
tests/: test_agent_readiness.py  test_cli.py  test_integrations_install.py  test_live_trace.py  test_map_lock.py  test_phase1_exports_query.py  test_scanner.py  test_token_efficiency.py  test_visualization_export.py
(+3 files in other folders)
